# QtQRCodeScanner

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  qrcodescanner.cpp  qrcodescanner.h
android/: AndroidManifest.xml
